# rnn_pipeline

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: data.yaml
input/: data.dvc
input/data/: data.csv  mm_25624.csv
input/params/: experiment_params.json  model_design.json  model_optimizer_params.json  model_params.json  search_params.json
src/cmd/: data.py  deploy.py  main.py  report.py
src/config/: file_constants.py
src/data/: data_container.py  data_loader.py  data_processing.py
src/experiments/: experiment_handler.py  experiment_param.py  experiment_tracker.py
src/models/: model.py  model_evaluation.py  model_metric_callback.py  model_metrics.py  model_optimizer_params.py  model_params.py  model_stopping_callback.py  model_training.py
src/notebooks/: main.ipynb
src/optimization/: hpo_manager.py  hpo_optimizer_set.py  hpo_stopping.py  hpo_termination_error.py
src/optimization/search/: search_optimizer_callback.py  search_optimizer_params.py  search_optimizer_set.py  search_optimizier.py
src/report/: report.py  report_data_filter.py  report_initializer.py
src/utils/: git_commands.py  gpu_config.py  input_validator.py  json_utils.py  log_post.py  log_write.py  model_calculations.py  os_utils.py  plots.py  value_mapper.py
