[tool.poetry]
name = "green-ai"
version = "0.1.0"
description = ""
authors = ["Jana Janković <jana.jankovic@student.um.si>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.26.0,<2.1.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow-intel = {version="^2.15.0", platform = "win32"}
tensorflow = "^2.18.0"
optuna = "^4.1.0"
deap = "^1.4.1"
matplotlib = "^3.9.3"
jinja2 = "^3.1.5"
seaborn = "^0.13.2"
streamlit = "^1.41.1"
ray = "^2.43.0"
nevergrad = "^1.0.8"
yfinance = "^0.2.55"
dvc = {extras = ["s3"], version = "^3.59.1"}

[tool.poetry.scripts]
pipeline = "src.cmd.main:main"
report = "src.cmd.report:main"
deploy = "src.cmd.deploy:main"
fetch_data = "src.cmd.data:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
